tests/expectations/compiler/const_generics/unresolved_mismatch_fail.out
Error [ECMP0376012]: Unable to resolve struct expression `Foo`. A non-const expression `0u32 * x` was provided where a const generic parameter is required.
    --> compiler-test:12:16
     |
  12 |         return Foo::[2 * N * x] { x: 0 };
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^
